Modified home callout css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to my DemoApp!</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>Welcome to my SaasDemoApp!</h1>
+  <h3>A memembership site where I can show my skills.</h3>
+</div>
+
