--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,8 +25,31 @@ h1, h2, h3 {
   background: #D31027;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #EA384D, #D31027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
   border: none;
 }
+
+.navbar-default .navbar-brand {
+  color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: white;
+  opacity: 0.85;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: white;
+  opacity: 0.85;
+}
+
+
 
 .home-callout {
   color: white;
