--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+  <h1>About Page</h1>
+  <p>This is a demo page created with ruby on rails, sass, bootstrap, stripe</p>
+</div>
+
